courses/430_programming-languages/assignment-6/tests/error/hw5_error13.nex
print "should not get here:n";
1 / 0;
return 2;
